--- a/m02_01_store-sales_predction.ipynb
+++ b/m02_01_store-sales_predction.ipynb
@@ -10,19 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "bafde92e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import inflection"
+    "import inflection\n",
+    "import math"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "db0c740b",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 0.1 HELPER FUNCTIONS"
    ]
@@ -30,21 +33,157 @@
   {
    "cell_type": "markdown",
    "id": "5060b5aa",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 0.2 LOAD DATA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c91f4891",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "id": "89071ba6",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>StoreType</th>\n",
+       "      <th>Assortment</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "      <th>PromoInterval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>14130.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>c</td>\n",
+       "      <td>c</td>\n",
+       "      <td>620.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>29910.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store StoreType Assortment  CompetitionDistance  CompetitionOpenSinceMonth  \\\n",
+       "0      1         c          a               1270.0                        9.0   \n",
+       "1      2         a          a                570.0                       11.0   \n",
+       "2      3         a          a              14130.0                       12.0   \n",
+       "3      4         c          c                620.0                        9.0   \n",
+       "4      5         a          a              29910.0                        4.0   \n",
+       "\n",
+       "   CompetitionOpenSinceYear  Promo2  Promo2SinceWeek  Promo2SinceYear  \\\n",
+       "0                    2008.0       0              NaN              NaN   \n",
+       "1                    2007.0       1             13.0           2010.0   \n",
+       "2                    2006.0       1             14.0           2011.0   \n",
+       "3                    2009.0       0              NaN              NaN   \n",
+       "4                    2015.0       0              NaN              NaN   \n",
+       "\n",
+       "     PromoInterval  \n",
+       "0              NaN  \n",
+       "1  Jan,Apr,Jul,Oct  \n",
+       "2  Jan,Apr,Jul,Oct  \n",
+       "3              NaN  \n",
+       "4              NaN  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_sales_raw = pd.read_csv('train.csv', low_memory = False)\n",
     "df_store_raw = pd.read_csv('store.csv', low_memory = False)\n",
-    "df_raw = pd.merge(df_sales_raw, df_store_raw, how='left', on = 'Store')"
+    "df_raw = pd.merge(df_sales_raw, df_store_raw, how='left', on = 'Store')\n",
+    "df_store_raw.head()"
    ]
   },
   {
@@ -57,18 +196,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "10dbf9f5",
+   "execution_count": 3,
+   "id": "9a2e384b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "      <th>StoreType</th>\n",
+       "      <th>Assortment</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "      <th>PromoInterval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>14130.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>Jan,Apr,Jul,Oct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>c</td>\n",
+       "      <td>620.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>29910.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store  DayOfWeek        Date  Sales  Customers  Open  Promo StateHoliday  \\\n",
+       "0      1          5  2015-07-31   5263        555     1      1            0   \n",
+       "1      2          5  2015-07-31   6064        625     1      1            0   \n",
+       "2      3          5  2015-07-31   8314        821     1      1            0   \n",
+       "3      4          5  2015-07-31  13995       1498     1      1            0   \n",
+       "4      5          5  2015-07-31   4822        559     1      1            0   \n",
+       "\n",
+       "   SchoolHoliday StoreType Assortment  CompetitionDistance  \\\n",
+       "0              1         c          a               1270.0   \n",
+       "1              1         a          a                570.0   \n",
+       "2              1         a          a              14130.0   \n",
+       "3              1         c          c                620.0   \n",
+       "4              1         a          a              29910.0   \n",
+       "\n",
+       "   CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  \\\n",
+       "0                        9.0                    2008.0       0   \n",
+       "1                       11.0                    2007.0       1   \n",
+       "2                       12.0                    2006.0       1   \n",
+       "3                        9.0                    2009.0       0   \n",
+       "4                        4.0                    2015.0       0   \n",
+       "\n",
+       "   Promo2SinceWeek  Promo2SinceYear    PromoInterval  \n",
+       "0              NaN              NaN              NaN  \n",
+       "1             13.0           2010.0  Jan,Apr,Jul,Oct  \n",
+       "2             14.0           2011.0  Jan,Apr,Jul,Oct  \n",
+       "3              NaN              NaN              NaN  \n",
+       "4              NaN              NaN              NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df1 = df_raw.copy()"
+    "df1 = df_raw.copy()\n",
+    "df1.isna().sum()\n",
+    "df1.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1df9c247",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 1.1 RENAME COLUMNS\n",
     "\n"
@@ -76,9 +405,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a39b1afa",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "5e983864",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
+       "       'StateHoliday', 'SchoolHoliday', 'StoreType', 'Assortment',\n",
+       "       'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+       "       'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
+       "       'Promo2SinceYear', 'PromoInterval'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "059bf3e8",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "cols_old = ['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo','StateHoliday',\n",
@@ -87,39 +446,141 @@
     "            'Promo2', 'Promo2SinceWeek','Promo2SinceYear', 'PromoInterval']\n",
     "snakecase = lambda x : inflection.underscore(x)\n",
     "cols_new = list(map(snakecase, cols_old))\n",
-    "df1cols_new"
+    "df1.columns = cols_new"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a35dc7f0",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 1.2 DATA DIMENSIONS\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "86631615",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "id": "90edbe8f",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows 1017209\n",
+      "Number of colunms 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of rows {df1.shape[0]}')\n",
+    "print(f'Number of colunms {df1.shape[1]}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ef19e9fe",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "##\n"
+    "## 1.3 DATA TYPES\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0a060a83",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "store                             int64\n",
+       "day_of_week                       int64\n",
+       "date                             object\n",
+       "sales                             int64\n",
+       "customers                         int64\n",
+       "open                              int64\n",
+       "promo                             int64\n",
+       "state_holiday                    object\n",
+       "school_holiday                    int64\n",
+       "store_type                       object\n",
+       "assortment                       object\n",
+       "competition_distance            float64\n",
+       "competition_open_since_month    float64\n",
+       "competition_open_since_year     float64\n",
+       "promo2                            int64\n",
+       "promo2_since_week               float64\n",
+       "promo2_since_year               float64\n",
+       "promo_interval                   object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.dtypes"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "9315483f",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "##\n"
+    "## 1.4CHECK NA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "280e0193",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "store                                0\n",
+       "day_of_week                          0\n",
+       "date                                 0\n",
+       "sales                                0\n",
+       "customers                            0\n",
+       "open                                 0\n",
+       "promo                                0\n",
+       "state_holiday                        0\n",
+       "school_holiday                       0\n",
+       "store_type                           0\n",
+       "assortment                           0\n",
+       "competition_distance              2642\n",
+       "competition_open_since_month    323348\n",
+       "competition_open_since_year     323348\n",
+       "promo2                               0\n",
+       "promo2_since_week               508031\n",
+       "promo2_since_year               508031\n",
+       "promo_interval                  508031\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isna().sum()"
    ]
   },
   {
@@ -127,7 +588,30 @@
    "id": "ff175bc8",
    "metadata": {},
    "source": [
-    "##\n"
+    "## FILLOUT NA\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "100fa4c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['competition_distance'] = df1['competition_distance'].apply(lambda x: 200000 if math.isnan(x)\n",
+    "                                                               else x)\n"
    ]
   },
   {
