--- a/m03_01_store-sales_predction.ipynb
+++ b/m03_01_store-sales_predction.ipynb
@@ -14,8 +14,8 @@
    "id": "bafde92e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:19.164000Z",
-     "start_time": "2022-06-17T19:50:17.868335Z"
+     "end_time": "2022-06-20T17:05:26.751876Z",
+     "start_time": "2022-06-20T17:05:24.952817Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "id": "3bfcd429",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:19.188653Z",
-     "start_time": "2022-06-17T19:50:19.165830Z"
+     "end_time": "2022-06-20T17:05:26.781885Z",
+     "start_time": "2022-06-20T17:05:26.753629Z"
     }
    },
    "outputs": [
@@ -100,8 +100,8 @@
    "id": "89071ba6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:20.506510Z",
-     "start_time": "2022-06-17T19:50:19.906886Z"
+     "end_time": "2022-06-20T17:05:27.478627Z",
+     "start_time": "2022-06-20T17:05:26.784123Z"
     }
    },
    "outputs": [
@@ -243,8 +243,8 @@
    "id": "9a2e384b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:21.251595Z",
-     "start_time": "2022-06-17T19:50:20.563154Z"
+     "end_time": "2022-06-20T17:05:28.160855Z",
+     "start_time": "2022-06-20T17:05:27.479933Z"
     }
    },
    "outputs": [
@@ -434,8 +434,8 @@
    "id": "5e983864",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:21.256947Z",
-     "start_time": "2022-06-17T19:50:21.253384Z"
+     "end_time": "2022-06-20T17:05:28.165932Z",
+     "start_time": "2022-06-20T17:05:28.162258Z"
     }
    },
    "outputs": [
@@ -465,8 +465,8 @@
    "id": "059bf3e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:21.273365Z",
-     "start_time": "2022-06-17T19:50:21.269560Z"
+     "end_time": "2022-06-20T17:05:28.171868Z",
+     "start_time": "2022-06-20T17:05:28.167523Z"
     }
    },
    "outputs": [],
@@ -498,8 +498,8 @@
    "id": "90edbe8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:21.733012Z",
-     "start_time": "2022-06-17T19:50:21.730290Z"
+     "end_time": "2022-06-20T17:05:28.176778Z",
+     "start_time": "2022-06-20T17:05:28.173491Z"
     }
    },
    "outputs": [
@@ -531,8 +531,8 @@
    "id": "0a060a83",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:22.226752Z",
-     "start_time": "2022-06-17T19:50:22.156323Z"
+     "end_time": "2022-06-20T17:05:28.254666Z",
+     "start_time": "2022-06-20T17:05:28.178028Z"
     }
    },
    "outputs": [
@@ -584,8 +584,8 @@
    "id": "280e0193",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:50:22.992987Z",
-     "start_time": "2022-06-17T19:50:22.577347Z"
+     "end_time": "2022-06-20T17:05:28.672041Z",
+     "start_time": "2022-06-20T17:05:28.256090Z"
     }
    },
    "outputs": [
@@ -637,8 +637,8 @@
    "id": "100fa4c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:16.917813Z",
-     "start_time": "2022-06-17T19:50:22.994745Z"
+     "end_time": "2022-06-20T17:06:25.249777Z",
+     "start_time": "2022-06-20T17:05:28.673333Z"
     }
    },
    "outputs": [],
@@ -677,8 +677,8 @@
    "id": "89f3f085",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:16.965309Z",
-     "start_time": "2022-06-17T19:51:16.919527Z"
+     "end_time": "2022-06-20T17:06:25.299987Z",
+     "start_time": "2022-06-20T17:06:25.251055Z"
     }
    },
    "outputs": [],
@@ -705,8 +705,8 @@
    "id": "2eb095af",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:16.969847Z",
-     "start_time": "2022-06-17T19:51:16.966494Z"
+     "end_time": "2022-06-20T17:06:25.305644Z",
+     "start_time": "2022-06-20T17:06:25.302717Z"
     }
    },
    "outputs": [],
@@ -730,8 +730,8 @@
    "id": "2ba3ed65",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:17.499364Z",
-     "start_time": "2022-06-17T19:51:16.971966Z"
+     "end_time": "2022-06-20T17:06:25.919466Z",
+     "start_time": "2022-06-20T17:06:25.306965Z"
     }
    },
    "outputs": [
@@ -946,15 +946,15 @@
    "id": "006ea89e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:20.054527Z",
-     "start_time": "2022-06-17T19:51:17.500635Z"
+     "end_time": "2022-06-20T17:06:28.778754Z",
+     "start_time": "2022-06-20T17:06:25.921002Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f3b3a406e30>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f604eb063b0>"
       ]
      },
      "execution_count": 14,
@@ -990,8 +990,8 @@
    "id": "bdc2c931",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:20.195847Z",
-     "start_time": "2022-06-17T19:51:20.055943Z"
+     "end_time": "2022-06-20T17:06:28.913750Z",
+     "start_time": "2022-06-20T17:06:28.780020Z"
     }
    },
    "outputs": [
@@ -1021,8 +1021,8 @@
    "id": "67303789",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:21.210720Z",
-     "start_time": "2022-06-17T19:51:20.197182Z"
+     "end_time": "2022-06-20T17:06:30.011782Z",
+     "start_time": "2022-06-20T17:06:28.915178Z"
     }
    },
    "outputs": [
@@ -1067,6 +1067,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5857dc29",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-20T17:06:30.080027Z",
+     "start_time": "2022-06-20T17:06:30.014143Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df2 = df1.copy()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "23972137",
    "metadata": {
@@ -1081,12 +1096,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "af185a3a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-17T19:51:21.241399Z",
-     "start_time": "2022-06-17T19:51:21.212320Z"
+     "end_time": "2022-06-20T17:06:30.114169Z",
+     "start_time": "2022-06-20T17:06:30.081576Z"
     },
     "scrolled": true
    },
@@ -1098,7 +1113,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,15 +1194,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2fbbc31",
+   "id": "e04e2855",
    "metadata": {},
    "source": [
-    "## 2.3 FINAL LIST HYPOTHESES"
+    "### 2.2.4 FINAL LIST HYPOTHESES "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10b85599",
+   "id": "c9bad1f8",
    "metadata": {},
    "source": [
     "**1** Stores with the Largest Assortment Sell More    \n",
@@ -1199,17 +1214,66 @@
     "**7** Stores open during the Christmas holiday should sell more  \n",
     "**8** Stores should sell more over the years      \n",
     "**9** Stores should sell more after the 10th of each month  \n",
-    "**10** \n",
+    "**10** Stores should sell more in the second half\n",
     "**11** Stores should sell less on weekends  \n",
     "**12** Stores should sell less during school holidays  \n",
     " "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aaecab83",
+   "metadata": {},
+   "source": [
+    "## 2.3 FEATURE ENGINEERING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "75b1e21c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-20T17:06:54.427473Z",
+     "start_time": "2022-06-20T17:06:30.115471Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# year\n",
+    "df2['year'] = df2['date'].dt.year\n",
+    "# month\n",
+    "df2['month'] = df2['date'].dt.month\n",
+    "# day\n",
+    "df2['day'] = df2['date'].dt.day\n",
+    "# week of year\n",
+    "df2['week_of_year'] = df2['date'].dt.isocalendar().week\n",
+    "# year of week\n",
+    "df2['year_week'] = df2['date'].dt.strftime('%Y-%W')\n",
+    "# competition since\n",
+    "df2['competition_since'] = df2.apply(lambda x : datetime.datetime(year = x['competition_open_since_year'] , month = x['competition_open_since_month'], day=1), axis = 1)\n",
+    "df2['competition_since_month'] = (df2['date']-df2['competition_since']).apply(lambda x : int((x.days)/30))\n",
+    "# promo since\n",
+    "df2['promo_since'] = df2['promo2_since_year'].astype(str) + '-' + df2['promo2_since_week'].astype( str )\n",
+    "df2['promo_since'] = df2['promo_since'].apply( lambda x : datetime.datetime.strptime(x + '-1','%Y-%W-%w')) - datetime.timedelta(days = 7)\n",
+    "df2['promo_time_week'] = ( ( df2['date'] - df2['promo_since'] ) /7 ).apply(lambda x : x.days).astype( int )\n",
+    "# assortment\n",
+    "df2['assortment'] = df2['assortment'].apply(lambda x : 'basic' if x == 'a' else 'extra' if x == 'b' else 'extended') \n",
+    "# state holiday\n",
+    "df2['state_holiday'] = df2['state_holiday'].apply( lambda x : 'public_holiday' if x == 'a' else 'easter_holiday' if x == 'b' else 'christimas' if x == 'c' else 'regular_day')\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d002443d",
-   "metadata": {},
+   "id": "ad78093c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-20T20:45:08.896842Z",
+     "start_time": "2022-06-20T20:44:55.270819Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
