--- a/m04_01_store-sales_predction.ipynb
+++ b/m04_01_store-sales_predction.ipynb
@@ -1884,12 +1884,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "bee57499",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-23T19:14:24.110943Z",
-     "start_time": "2022-06-23T19:14:22.878688Z"
+     "end_time": "2022-06-23T20:52:16.310940Z",
+     "start_time": "2022-06-23T20:52:15.135121Z"
     },
     "hide_input": false,
     "scrolled": false
@@ -1907,8 +1907,7 @@
     }
    ],
    "source": [
-    "\n",
-    "sns.displot(df4['sales'], kde = False);\n"
+    "sns.displot(df4['sales'], kde = False);"
    ]
   },
   {
@@ -1918,7 +1917,8 @@
     "ExecuteTime": {
      "end_time": "2022-06-23T14:09:41.269279Z",
      "start_time": "2022-06-23T14:09:41.267044Z"
-    }
+    },
+    "hide_input": true
    },
    "source": [
     "### 4.1.2 NUMERICAL VARIABLE"
@@ -2071,7 +2071,7 @@
      "end_time": "2022-06-23T19:14:32.270662Z",
      "start_time": "2022-06-23T19:14:26.205906Z"
     },
-    "hide_input": false,
+    "hide_input": true,
     "scrolled": false
    },
    "outputs": [
@@ -2138,6 +2138,14 @@
    "source": [
     "## 4.2 BIVARIATE ANALYSIS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad6ff7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
