apply rescaling techniques

--- a/m04_01_store-sales_predction.ipynb
+++ b/m04_01_store-sales_predction.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "275120e5",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 0.0 IMPORTS\n"
    ]
@@ -17,6 +19,7 @@
      "end_time": "2022-07-26T21:29:25.302635Z",
      "start_time": "2022-07-26T21:29:25.299380Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -39,7 +42,8 @@
    "cell_type": "markdown",
    "id": "db0c740b",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 0.1 HELPER FUNCTIONS"
@@ -2866,10 +2870,11 @@
      "end_time": "2022-07-17T22:30:43.526156Z",
      "start_time": "2022-07-17T22:30:43.524018Z"
     },
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
-    "# 4.3 Multivariate analysis"
+    "## 4.3 Multivariate analysis"
    ]
   },
   {
@@ -2919,6 +2924,7 @@
    "cell_type": "markdown",
    "id": "90c9e049",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -3317,7 +3323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b45e6688",
+   "id": "be763e05",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-25T22:28:00.264698Z",
@@ -3519,7 +3525,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "c201c1ba",
+   "id": "d2e0cd4b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-26T21:40:01.218435Z",
@@ -3538,7 +3544,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "99e1cea9",
+   "id": "167d3fee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-26T21:40:05.369790Z",
@@ -3788,7 +3794,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6503a271",
+   "id": "9fc17ad6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-26T20:52:00.614996Z",
